<resources>
    #Textos genericos/nomes de telas
    <string name="app_name">AppAndroid</string>
    <string name="Login">Login</string>
    <string name="Professor">Professor</string>
    <string name="Cadastrar">Cadastrar aluno</string>
    <string name="Disciplina">Disciplina</string>
    <string name="Materias">Materias</string>


    #Detalhes de login
    <string name="Matricula">Matricula</string>
    <string name="Senha">Senha</string>
    <string name="Conf_Senha">Confirme a senha</string>

    #Detalhes de perfil
    <string name="Nome">Nome</string>
    <string name="Sobrenome">Sobrenome</string>

    #Detalhes Inserir disciplina
    <string name="addDisciplina">Nome da disciplina</string>

    #Detalhes Inserir aula
    <string name="addAula">Descrição da aula</string>
    <string name="dataAula">Data da aula</string>

    #Texto botoes
    <string name="BT_prox">Login</string>
    <string name="BT_cadastrar">Cadastrar</string>
    <string name="BT_save">Salvar</string>
    <string name="BT_cancelar">Cancelar</string>
    <string name="BT_selecionar">Selecionar</string>
    <string name="BT_addDisciplina">Adicionar disciplina</string>

    #Textos de aviso
    <string name="info_prof">Obs.: Professores são cadastrados apenas no site.\n</string>

    #Textos de menu
    <string name="at_cadastro">Atualizar cadastro</string>

    <string name="M_novaAula">Nova aula</string>
    <string name="M_deleteAula">Apagar Aula</string>

</resources>
