<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Cadastro_view">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cadastrar"
                android:textSize="23sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/TX_Alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Alerta"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/info_prof"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nome"/>

            <EditText
                android:id="@+id/ET_Nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sobrenome"/>

            <EditText
                android:id="@+id/ET_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Matricula"/>

            <EditText
                android:id="@+id/ET_matricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Senha"/>

            <EditText
                android:id="@+id/ET_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Conf_Senha"/>

            <EditText
                android:id="@+id/ET_conf_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/TX_Alerta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Alerta"
                android:gravity="center"
                android:textSize="15sp"/>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/BT_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BT_save"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
