<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login_view"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textSize="23sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Matricula"/>

            <EditText
                android:id="@+id/ET_matricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Senha"/>

            <EditText
                android:id="@+id/ET_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/TX_Alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Alerta"
                android:gravity="center"
                android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/BT_Cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BT_cadastrar"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false" />

    <Button
        android:id="@+id/BT_PTela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BT_prox"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
